--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -2,11 +2,11 @@
 Mark Pollack; Thomas Risberg; Oliver Gierke; Costin Leau; Jon Brisbin; Thomas Darimont; Christoph Strobl; Mark Paluch; Jay Bryant
 :revnumber: {version}
 :revdate: {localdate}
+:toc:
+:toc-placement!:
 :linkcss:
 :doctype: book
 :docinfo: shared
-:toc: left
-:toclevels: 4
 :source-highlighter: prettify
 :icons: font
 :imagesdir: images
@@ -16,6 +16,8 @@ ifdef::backend-epub3[:front-cover-image: image:epub-cover.png[Front Cover,1050,1
 (C) 2008-2018 The original authors.
 
 NOTE: Copies of this document may be made for your own use and for distribution to others, provided that you do not charge any fee for such copies and further provided that each copy contains this Copyright Notice, whether distributed in print or electronically.
+
+toc::[]
 
 include::preface.adoc[]
 
