--- a/src/main/asciidoc/reference/reactive-mongo-repositories.adoc
+++ b/src/main/asciidoc/reference/reactive-mongo-repositories.adoc
@@ -60,7 +60,7 @@ public interface ReactivePersonRepository extends ReactiveSortingRepository<Pers
   Mono<Person> findFirstByLastname(String lastname);                                <5>
 }
 ----
-<1> The method shows a query for all people with the given `lastname`. The query us derived by parsing the method name for constraints that can be concatenated with `And` and `Or`. Thus, the method name results in a query expression of `{"lastname" : lastname}`.
+<1> The method shows a query for all people with the given `lastname`. The query is derived by parsing the method name for constraints that can be concatenated with `And` and `Or`. Thus, the method name results in a query expression of `{"lastname" : lastname}`.
 <2> The method shows a query for all people with the given `firstname` once the `firstname` is emitted by the given `Publisher`.
 <3> Use `Pageable` to pass offset and sorting parameters to the database.
 <4> Find a single entity for the given criteria. It completes with `IncorrectResultSizeDataAccessException` on non-unique results.
@@ -69,7 +69,7 @@ public interface ReactivePersonRepository extends ReactiveSortingRepository<Pers
 
 For Java configuration, use the `@EnableReactiveMongoRepositories` annotation. The annotation carries the same attributes as the namespace element. If no base package is configured, the infrastructure scans the package of the annotated configuration class.
 
-NOTE: MongoDB uses two different drivers for blocking and reactive (non-blocking) data access. You must create a connection by using the Reactive Streams driver to provide the required infrastructure for Spring Data's Reactive MongoDB support. Consequently, you must provide a separate configuration for MongoDB's Reactive Streams driver. Note that your application operates on two different connections if you use reactive and blocking Spring Data MongoDB templates and repositories.
+NOTE: MongoDB uses two different drivers for imperative (synchronous/blocking) and reactive (non-blocking) data access. You must create a connection by using the Reactive Streams driver to provide the required infrastructure for Spring Data's Reactive MongoDB support. Consequently, you must provide a separate configuration for MongoDB's Reactive Streams driver. Note that your application operates on two different connections if you use reactive and blocking Spring Data MongoDB templates and repositories.
 
 The following listing shows how to use Java configuration for a repository:
 
@@ -152,7 +152,7 @@ public interface PersonRepository extends ReactiveMongoRepository<Person, String
 ----
 ====
 
-Adding a `Distance` parameter to the query method allows restricting results to those within the given distance. If the `Distance` was set up containing a `Metric`, we transparently use `$nearSphere` instead of $code, as the following example shows:
+Adding a `Distance` parameter to the query method allows restricting results to those within the given distance. If the `Distance` was set up containing a `Metric`, we transparently use `$nearSphere` instead of `$code`, as the following example shows:
 
 .Using `Distance` with `Metrics`
 ====
@@ -175,7 +175,7 @@ NOTE: Using `@GeoSpatialIndexed(type = GeoSpatialIndexType.GEO_2DSPHERE)` on the
 
 ==== Geo-near Queries
 
-Spring Data MongoDb supports geo-near queries, as the following example shows:
+Spring Data MongoDB supports geo-near queries, as the following example shows:
 
 [source,java]
 ----
